# rust-auth-validator

./: Cargo.toml
migrations/: 20250113140707_users.down.sql
src/: auth.rs  config.rs  dtos.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  services.rs
src/controller/: auth.rs  user.rs
src/controllers/: jwt.rs  mod.rs  signup.rs
src/email/: mails.rs  mod.rs  sendmail.rs
src/model/: users.rs
src/routes/: auth.rs  mod.rs  user.rs
src/utils/: password.rs  token.rs
