[package]
name = "rust-auth-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.95"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
validator = { version = "0.18.0", features = ["derive"] }
axum = "0.8.1"
async-trait = "0.1.85"
