[package]
name = "auth-validator"
version = "0.1.0"
edition = "2021"

# [lints.rust]
# unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.95"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
validator = { version = "0.18.0", features = ["derive"] }
axum = "0.8.1"
async-trait = "0.1.85"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tower = "0.5.2"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.10.0", features = ["cookie"] }
lettre = "0.11.11"
time = "0.3.20"

[lib]
name = "auth_validator"
path = "src/lib.rs"
